[project]
name = "llm-data-process"
version = "0.1.0"
description = "Scalable corpus processing pipeline: Trafilatura/Unstructured -> Markdown -> markdown-it-py -> Datatrove -> JSONL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "trafilatura>=1.10.0",
  "unstructured[all-docs]>=0.16.0",
  "markdown-it-py>=3.0.0",
  "datatrove>=0.3.0",
  "orjson>=3.10.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0",
]

[project.scripts]
llm-data-process = "pipeline.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
